# GeneralSocksProxy

./: CMakeLists.txt  README.md
depends/: build_depends.sh
gsp/: configuration.c  configuration.h  encrypt.c  encrypt.h  local.c  local.h  log.c  log.h  pac.c  pac.h  ss_common.h  ss_worker.c  ss_worker.h  webserver.c  webserver.h
gsp_osx/: ConfigWindow.xib  GeneralSocksProxy-Info.plist  PACUpdateWindow.xib  SWBAppDelegate.h  SWBAppDelegate.m  SWBApplication.h  SWBApplication.m  SWBConfigWindowController.h  SWBConfigWindowController.m  SWBPACUpdateWindowController.h  SWBPACUpdateWindowController.m  SWBQRCodeWindowController.h  SWBQRCodeWindowController.m  abp.js  proxy.pac  proxy_conf.h  proxy_conf.m
